components/keycloak-ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/issuer: letsencrypt-keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  rules:
    - host: auth.labrenz.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja-keycloak
                port:
                  name: http
          - path: /.well-known/acme-challenge/*
            pathType: ImplementationSpecific
            backend:
              service:
                # this is a workaround
                name: cm-acme-http-solver-bgdjp
                port:
                  name: https
  tls:
  - secretName: keycloak-tls
    hosts:
    - auth.labrenz.org
